src/scss/partials/_foldersSidebar.scss
.folders-sidebar {
  position: relative;
  flex: 80px 0 0;

  display: flex;
  flex-direction: column;

  --background: #212121;
  --background-hover: #272727;

  background-color: var(--background);
  color: #717579;

  z-index: 4;

  --folder-item-ripple-color: rgba(255, 255, 255, #{$hover-alpha});

  @include respond-to(until-floating-left-sidebar) {
    display: none;
  }

  body:not(.has-folders-sidebar) & {
    display: none;
  }

  &__scrollable-position {
    position: relative;
    flex: 1;

    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      height: 2px;
      background: linear-gradient(to bottom, var(--background), transparent);
      // border-top: 1px solid rgba(0, 0, 0, 0.1);
      pointer-events: none;
      opacity: 0;
      transition: opacity 0.2s;
      z-index: 1;
    }
    &--has-scroll::before {
      opacity: 1;
    }
  }

  &__folder-item {
    position: relative;
    flex-shrink: 0;
    flex-grow: 0;

    overflow: hidden;

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--background);

    flex-direction: column;
    gap: 6px;

    padding: 12px 0;
    min-height: 56px;

    font-size: 10px;
    line-height: 12px;
    font-weight: 500;
    
    cursor: pointer;

    > .tgico {
      font-size: 30px;
    }

    > .badge {
      position: absolute;
      top: 6px;
      right: 19px;

      font-size: 12px;
      line-height: 18px !important;

      box-shadow: 0 0 0 1px var(--background);
    }

    > .c-ripple {
      --ripple-color: var(--folder-item-ripple-color) !important;
    }

    &:hover {
      --background: var(--background-hover);
    }

    &-name {
      max-width: 80%;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    &--selected {
      color: var(--primary-color);
    }
  }

  &__menu-button {
    > .tgico {
      font-size: 24px;
    }

    .btn-menu {
      inset-inline: 48px auto;
    }
  }

  .btn-new-menu {
    display: none;
    position: absolute !important;
    bottom: 1.25rem;
    left: 50%;
    transform: translateX(-50%) !important;

    .btn-menu.top-left {
      --transform-origin-x: var(--transform-origin-inline-start);
      inset-inline: 0 auto;
      inset-block: auto 120%;
    }

    @include respond-to(no-floating-left-sidebar) {
      html:has(#column-left.is-collapsed) & {
        display: flex;
      }
    }
  }

  &__add-folders-button {
    position: absolute;
    top: calc(var(--offset) * 1px);
    right: 0;
    transform: translate(100%, -50%);

    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 6px;

    width: 72px;
    height: 88px;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    background-color: var(--background);

    mask-image: url('/assets/img/add-chats-to-folder-shape.svg');

    font-size: 10px;
    line-height: 12px;
    font-weight: 500;

    color: #aaaaaa;
    border-left: 1px solid rgba(0, 0, 0, 0.1);

    transition: opacity .2s;

    cursor: pointer;

    &:hover {
      --background: var(--background-hover);
    }

    :has(#column-left.is-collapsed:not(.has-open-tabs)) & {
      display: flex;
    }

    body:has(.hide-add-folders) & {
      opacity: 0 !important;
    }

    > .tgico {
      font-size: 30px;
    }

    > .c-ripple {
      --ripple-color: var(--folder-item-ripple-color) !important;
    }

    &-corner {
      position: absolute;
      left: 0;

      &:nth-of-type(1) {
        top: -8px;
      }
      &:nth-of-type(2) {
        bottom: -8px;
        transform: scaleY(-1);
      }
    }
  }
}

.night .folders-sidebar {
  --background: #141414;
  --background-hover: #1b1b1b;
}

